@@ -108,8 +108,8 @@ LocalTest::enter(GameEngine* ge)
   
   LOGI("LocalTest signals successfully registered");
 
-  //  AnimatedImage* wic = new AnimatedImage(ge);
-  //  mMenuWindow->addChild(wic);
+  AnimatedImage* wic = new AnimatedImage(ge);
+  mMenuWindow->addChild(wic);
 }
 
 
